...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bxX-4U-vNT">
                                        <rect key="frame" x="0.0" y="0.0" width="228" height="59"/>
                                        <accessibility key="accessibilityConfiguration" label="FindEventsButton"/>
                                        <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="39"/>
                                        <state key="normal" title="Find Events">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EuZ-9r-8jz" userLabel="PublishEventsButton">
                                        <rect key="frame" x="0.0" y="109" width="228" height="59"/>
                                        <accessibility key="accessibilityConfiguration" label="PublishEventsButton"/>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIs-gJ-y0P" userLabel="FindVenuesButton">
                                        <rect key="frame" x="0.0" y="217.99999999999994" width="228" height="59"/>
                                        <accessibility key="accessibilityConfiguration" label="FindVenuesButton"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <searchBar contentMode="redraw" prompt="Enter a location" placeholder="Location or Event ID" translatesAutoresizingMaskIntoConstraints="NO" id="k2t-om-zXI" userLabel="SearchBar">
                                <rect key="frame" x="34" y="396" width="346" height="90"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbc-la-dGt">
                                <rect key="frame" x="100" y="496" width="214" height="33"/>
                                <accessibility key="accessibilityConfiguration" label="SearchBarSearchButton"/>
                                <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="17"/>
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtT-gr-bgO">
                                <rect key="frame" x="45.666666666666657" y="269.66666666666669" width="323" height="81.333333333333314"/>
                                <accessibility key="accessibilityConfiguration" label="FindVenuesLabel"/>
                                <attributedString key="attributedText">
                                    <fragment content="Find Venues">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NlA-pl-Z9o">
                                <rect key="frame" x="183.66666666666666" y="480" width="47" height="33"/>
                                <accessibility key="accessibilityConfiguration" label="VenueSearchButton"/>
                                <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="17"/>
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="HZx-hk-gef">
                                <rect key="frame" x="99" y="30" width="216" height="156"/>
                                <accessibility key="accessibilityConfiguration" identifier="VenueNameLabel"/>
                                <attributedString key="attributedText">
                                    <fragment content="Venue">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" layoutMarginsFollowReadableWidth="YES" text="Venue ID:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO"
                                        <rect key="frame" x="0.0" y="71.333333333333314" width="101.66666666666667" height="31.333333333333329"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IdLabel"/>
                                        <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="26"/>
                                        <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9W2-U6-pzd">
                                <rect key="frame" x="157" y="757" width="100" height="43"/>
                                <accessibility key="accessibilityConfiguration" label="ChooseVenueButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="DNh-4J-kNC"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="CgT-jc-0Kl">
                                <rect key="frame" x="21" y="92" width="372.33333333333331" height="81.5"/>
                                <accessibility key="accessibilityConfiguration" label="PublishEventLabel"/>
                                <attributedString key="attributedText">
                                    <fragment content="Publish Event">
...
