...
        eventNameField.text = publishParams.title
        venueSearchBar.text = publishParams.venue_name
        descriptionField.text = publishParams.description
        
        self.venueSearchBar.accessibilityTraits = UIAccessibilityTraits.searchField
        self.venueSearchBar.isAccessibilityElement = true
        self.venueSearchBar.accessibilityLabel="VenueSearchBar"
        
        self.datePicker.accessibilityTraits = UIAccessibilityTraits.searchField
        self.datePicker.isAccessibilityElement = true
        self.datePicker.accessibilityLabel = "DatePicker"
        
        let tap: UITapGestureRecognizer = UITapGestureRecognizer(target: self, action: #selector(UIInputViewController.dismissKeyboard))
        view.addGestureRecognizer(tap)
    }
    
    override func viewWillAppear(_ animated: Bool) {
...
